--- a/v602/content/theorie.tex
+++ b/v602/content/theorie.tex
@@ -67,7 +67,7 @@ Eine Abschätzung ergibt die Zusammenhänge
     \label{eqn:Sigma_Kupfer}
     E_{K \text{, abs}} &= R_\infty (z - \sigma_1)^2 \\
     E_{K \text{,} \alpha} &= R_\infty \frac{1}{n^2} (z - \sigma_1)^2 - R_\infty \frac{1}{m^2} (z - \sigma_2)^2 \\
-    E_{K \text{,} \beta} &= R_\infty \frac{1}{n^2} (z - \sigma_1)^2 - R_\infty \frac{1}{l^2} (z - \sigma_3)^2, \\
+    E_{K \text{,} \beta} &= R_\infty \frac{1}{n^2} (z - \sigma_1)^2 - R_\infty \frac{1}{l^2} (z - \sigma_3)^2, 
 \end{align}
 aus denen sich mit $n = 1$, $m = 2$ und $l = 3$ und dem Wert der Absorptionsenergie $E_{K\text{, abs}}$ die Abschirmkonstanten bestimmen lassen.
 
