Auswertung durch und ich jetzt auch :skull:

--- a/v602/content/anhang.tex
+++ b/v602/content/anhang.tex
@@ -2,15 +2,32 @@
 
 \Large\textbf{Anhang}
 
+!Sollte noch ins Inhaltsverzeichnis!
 
 \begin{figure}
     \centering
-    \includepdf[page= 1, scale=0.75]{content/MessdatenVXXX.pdf}
-\end{figure}
-
-\newpage
-
-\begin{figure}
+    \includegraphics[width = 0.8\textwidth]{Ga31.pdf}
+    \caption{Absorptionsspektrum von Gallium-31.}
+    \label{fig:Ga31}
+  \end{figure}
+  
+  \begin{figure}
     \centering
-    \includepdf[page= 2, scale=0.75]{content/MessdatenVXXX.pdf}
-\end{figure}
+    \includegraphics[width = 0.8\textwidth]{Br35.pdf}
+    \caption{Absorptionsspektrum von Brom-35.}
+    \label{fig:Br35}
+  \end{figure}
+  
+  \begin{figure}
+    \centering
+    \includegraphics[width = 0.8\textwidth]{Sr38.pdf}
+    \caption{Absorptionsspektrum von Strontium-38.}
+    \label{fig:Sr38}
+  \end{figure}
+  
+  \begin{figure}
+    \centering
+    \includegraphics[width = 0.8\textwidth]{Zr40.pdf}
+    \caption{Absorptionsspektrum von Zirconium-40.}
+    \label{fig:Zr40}
+  \end{figure}
