diskussion eig erstma feddig aber darfst gerne noch ergänzen da mir nicht so viel eingefallen ist :shit:

--- a/v602/content/anhang.tex
+++ b/v602/content/anhang.tex
@@ -1,8 +1,8 @@
 \newpage
 
-\Large\textbf{Anhang}
-
-!Sollte noch ins Inhaltsverzeichnis!
+\addcontentsline{toc}{section}{Anhang}
+\section*{Anhang}
+\label{sec:Anhang}
 
 \begin{figure}
     \centering
