--- a/v602/content/diskussion.tex
+++ b/v602/content/diskussion.tex
@@ -1,2 +1,23 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Im ersten Teil des Versuches wurde die Braggbedingung überprüft. Dabei dafür wurde der Glanzwinkel berechnet. Der gemessene Glanzwinkel hat eine relative Abweichung von 
+$\Delta \theta_\text{Glanz} = 2.5\%$ zum Theoriewert. Diese Abweichung genüg dem Anspruch an das verwendete Gerät und um die Braggbedingung zu bestätigen. Diese Abweichung 
+könnte unter anderem von einer zu großen Schrittweite der Winkel stammen. Da der Röntgenstrahl in dem verwendeten Gerät nicht durch ein Vakuum geleitet wurde kann die Abweichung
+zusätzlich durch mögliche Störungen der Umgebungsluft entstanden sein.  
+Im nächsten Teil wurde das Emissionsspektrum einer Kupferanode untersucht. Dabei wurde die Energie der K-Linien experimentell bestimmt. Diese weisen eine Abbewichung 
+von $\Delta K_{\alpha} = 0.30\%$ und $\Delta K_{\beta} = 1.34\%$. Diese Abweichungen unterliegen den selben möglichen Fehlern, welche im ersten Teil schon genannt wurden.
+Allerdings sind die Abbewichungen klein genug, um sie als qualitativ anzusehen.
+Wie in \autoref{subsec:emission} schon beschrieben konnte kein Grenzwinkel experimentell aufgenommen werden, obgleich der Bereich von $\theta_{\text{Grenz,theo}}$
+sehrwohl abgemessen wurde. Dies könnte für eine größere Ungenauigkeit der Messapparatur bei kleinen Winkeln sprechen. 
+Danach wurde das Auflösungsvermögen der Messapparatur berechnet. Der Wert lässt sich nicht mit einem Literaturwert vergleichen. Allerdings kann angenommen werden, das der
+Wert relativ gut ist, da die nötigen Werte zu Berechnung des Auflösungsvermögens keinen großen Abweichungen unterliegen. 
+Zuletzt wurden in diesem Messabschnitt die Abschirmkonstanten für Kupfer aus den Emissionsenergien bestimmt. $\sigma_1$ konnte nicht aus den Messwerten bestimmt werden. 
+$\sigma_2$ wurde mit einer Abweichung von $1.71\%$ bestimmt. Dies ist eine reltiv kleine Abweichung. $\sigma_3$ wurde mit einer Abbewichung von $21.66\%$ bestimmt. Diese 
+Abweichung ist sehr groß und ist nicht eindeutig begründbar.
+Im letzten Messabschnitt wurde die Absorptionsenergie und die Abschirmkonstanten für fünf verschiedene Stoffe berechnet. Dabei liegen die Abweichungen der 
+Absorptionsenergien lediglich zwischen $0.82\%$ und $3.94\%$. Dies sind allesamt kleine relativ kleine Abweichungen und sind lediglich auf die oben bereits erwähnten Fehler 
+zurückzuführen. Dahingegen liegen die Abweichungen der Abschirmkonstanten zwischen $3.25\%$ und $17.92\%$. Da alle Absorber händisch vor das \textit{GMZ} installiert wurden, 
+könnten durch Anwinkelung und Luftschichten die Messwerte gestört worden sein. Zuletzt wurde durch das Moseley-Gesetz die Rydbergkonstante bestimmt. Diese weicht um 
+$6.26\%$ von dem Literaturwert ab. 
+Zusammenfassend waren die Messungen generell relativ qualitativ, allerdings gab es einzelne Messung mit sehr großen Abweichungen. Dennoch ist die Messung mit der verwendeten
+Messapparatur nicht für sehr präzise Messungen nicht zu empfehlen.
