--- a/lit.bib
+++ b/lit.bib
@@ -113,6 +113,13 @@
 }
 
 @online{Dichlordifluormethan,
+	title = 	{X-Ray Transition Energies Data Base},
+	url = {https://physics.nist.gov/cgi-bin/XrayTrans/search.pl?element=Cu&lower=&upper=&units=eV},
+	urldate = {2022-04-24},
+	organization = {NIST},
+}
+
+@online{NIST,
 	title = 	{Dichlordifluormethan},
 	url = {https://gestis.dguv.de/data?name=026210},
 	urldate = {2021-12-10},
