--- a/v602/content/diskussion.tex
+++ b/v602/content/diskussion.tex
@@ -1,23 +1,31 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Im ersten Teil des Versuches wurde die Braggbedingung überprüft. Dabei dafür wurde der Glanzwinkel berechnet. Der gemessene Glanzwinkel hat eine relative Abweichung von 
-$\Delta \theta_\text{Glanz} = 2.5\%$ zum Theoriewert. Diese Abweichung genüg dem Anspruch an das verwendete Gerät und um die Braggbedingung zu bestätigen. Diese Abweichung 
-könnte unter anderem von einer zu großen Schrittweite der Winkel stammen. Da der Röntgenstrahl in dem verwendeten Gerät nicht durch ein Vakuum geleitet wurde kann die Abweichung
-zusätzlich durch mögliche Störungen der Umgebungsluft entstanden sein.  
-Im nächsten Teil wurde das Emissionsspektrum einer Kupferanode untersucht. Dabei wurde die Energie der K-Linien experimentell bestimmt. Diese weisen eine Abbewichung 
-von $\Delta K_{\alpha} = 0.30\%$ und $\Delta K_{\beta} = 1.34\%$. Diese Abweichungen unterliegen den selben möglichen Fehlern, welche im ersten Teil schon genannt wurden.
-Allerdings sind die Abbewichungen klein genug, um sie als qualitativ anzusehen.
-Wie in \autoref{subsec:emission} schon beschrieben konnte kein Grenzwinkel experimentell aufgenommen werden, obgleich der Bereich von $\theta_{\text{Grenz,theo}}$
-sehrwohl abgemessen wurde. Dies könnte für eine größere Ungenauigkeit der Messapparatur bei kleinen Winkeln sprechen. 
-Danach wurde das Auflösungsvermögen der Messapparatur berechnet. Der Wert lässt sich nicht mit einem Literaturwert vergleichen. Allerdings kann angenommen werden, das der
-Wert relativ gut ist, da die nötigen Werte zu Berechnung des Auflösungsvermögens keinen großen Abweichungen unterliegen. 
-Zuletzt wurden in diesem Messabschnitt die Abschirmkonstanten für Kupfer aus den Emissionsenergien bestimmt. $\sigma_1$ konnte nicht aus den Messwerten bestimmt werden. 
-$\sigma_2$ wurde mit einer Abweichung von $1.71\%$ bestimmt. Dies ist eine reltiv kleine Abweichung. $\sigma_3$ wurde mit einer Abbewichung von $21.66\%$ bestimmt. Diese 
-Abweichung ist sehr groß und ist nicht eindeutig begründbar.
-Im letzten Messabschnitt wurde die Absorptionsenergie und die Abschirmkonstanten für fünf verschiedene Stoffe berechnet. Dabei liegen die Abweichungen der 
-Absorptionsenergien lediglich zwischen $0.82\%$ und $3.94\%$. Dies sind allesamt kleine relativ kleine Abweichungen und sind lediglich auf die oben bereits erwähnten Fehler 
-zurückzuführen. Dahingegen liegen die Abweichungen der Abschirmkonstanten zwischen $3.25\%$ und $17.92\%$. Da alle Absorber händisch vor das \textit{GMZ} installiert wurden, 
-könnten durch Anwinkelung und Luftschichten die Messwerte gestört worden sein. Zuletzt wurde durch das Moseley-Gesetz die Rydbergkonstante bestimmt. Diese weicht um 
-$6.26\%$ von dem Literaturwert ab. 
-Zusammenfassend waren die Messungen generell relativ qualitativ, allerdings gab es einzelne Messung mit sehr großen Abweichungen. Dennoch ist die Messung mit der verwendeten
-Messapparatur nicht für sehr präzise Messungen nicht zu empfehlen.
+Der in \autoref{subsec:bragg} experimentell bestimmte Glanzwinkel $\theta_\text{Glanz} = \qty{13.65}{\degree}$ weicht um $\symup{\Delta} \theta_\text{Glanz} = \qty{2.5}{\percent}$
+von dem Theoriewert $\theta_\text{Glanz, theo} = \qty{14}{\degree}$ ab. Diese Abweichung ist im Rahmen der Messgenauigkeit akzeptabel, wirkt sich jedoch auf die Güte 
+der weiteren Messwerte aus. Ursachen für diese Abweichung könnten in der Kalibrierung des Messgerätes und in Ungenauigkeiten der Winkeleinstellung des Stellmotors liegen.
+
+Bei der Untersuchung des Emissionsspektrums der Kupferanode wurden experimentelle Werte der $K$-Linien bestimmt. Diese weisen Abweichungen 
+von $\Delta K_{\alpha} = \qty{0.3}{\percent}$ und $\Delta K_{\beta} = \qty{1.34}{\percent}$ auf, was ebenfalls auf die Kalibrierung des Gerätes zurückzuführen sein könnte.
+In Anbetracht der zuvor bestimmten Messunsicherheit von $\qty{2.5}{\percent}$ bestätigen diese Messwerte die Theorie.
+Wie in \autoref{subsec:emission} beschrieben konnte kein Grenzwinkel experimentell aufgenommen werden, obgleich der Bereich von $\theta_{\text{Grenz,theo}}$
+abgemessen wurde. Eine Ursache dafür könnte ein Hintergrundrauschen des Geiger-Müller-Zählrohres sein, welches keine Differenziation des Beginns der Röntgenphänomene 
+zum Grundrauschen erlaubt.  
+
+Anschließend wurde das Auflösungsvermögen der Messapparatur bestimmt. Der Wert lässt sich nicht mit einem Literaturwert vergleichen. Allerdings kann angenommen werden, 
+dass der Wert aussagekräftig ist, da die nötigen Werte zur Berechnung des Auflösungsvermögens keinen großen Abweichungen unterliegen.
+
+Im letzten Teil des Messabschnittes zum Emissionsspektrum wurden die Abschirmkonstanten für Kupfer aus den Emissionsenergien bestimmt. Zu $\sigma_1$ kann kein experimenteller
+Wert bestimmt werden, da sich mit der vorhandenen Apparatur $E_{K \text{,abs}}$ nicht messen lässt.
+Die Abschirmkonstante $\sigma_2$ wurde mit einer Abweichung von $1.71\%$ und $\sigma_3$ mit einer Abweichung von $21.66\%$ bestimmt.
+Eine Ursache für die Größe der zweiten Abweichung konnte nicht ermittelt werden.
+
+Im letzten Messabschnitt wurden die Absorptionsenergieen und die Abschirmkonstanten für fünf verschiedene Stoffe berechnet. Dabei liegen die Abweichungen der 
+Absorptionsenergien lediglich zwischen $0.82\%$ und $3.94\%$. Eine zusätzliche Fehlerqulle könnte in der Installation der verschiedenen Absorberstoffe in der Messapparatur
+liegen, da geringfügige Verstellungen der Winkel der einzelnen Geräte nicht auszuschließen sind.
+Die Abweichungen der Abschirmkonstanten zu den Literaturwerten liegen zwischen $3.25\%$ und $17.92\%$. Eine Urache hierfür könnte die Verstärkung der Messunsicherheiten 
+durch Approximationen und Fehlerfortpflanzung in der Berechnung der Abschirmkonstanten aus den Absorptionsenergien sein.
+
+Zuletzt wurde mithilfe des Moseley-Gesetzes die Rydbergenergie bestimmt. Diese weicht um 
+$6.26\%$ von dem Literaturwert ab, was ebenfalls auf selbige Gründe zurückzuführen ist. 
+
+Es ergibt sich, dass die Qualität der Messwerte zur Verifikation der Theorieerwartungen ausreicht, jedoch nicht für präzise Messungen geeignet ist.
